provision/modules/kind/bootstrap-apps/loki/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loki-gateway
  namespace: istio-system
spec:
  gateways:
    - istio-system/gateway
  hosts:
    - "loki.company-test.com"
  http:
    - route:
        - destination:
            host: loki.loki.svc.cluster.local
            port:
              number: 3100
